Escape lost variables after last comment
Escape file load;

Move main processor method to main plugin class for virtual page, like new page with parameters ?order_id=xx from checkout page;

Update short init in validation.php;

--- a/Twispay WooCommerce Plugin/twispay/assets/css/admin.css
+++ b/Twispay WooCommerce Plugin/twispay/assets/css/admin.css
@@ -1,19 +1,7 @@
-#staging_site_id {
-    display: none;
-}
-
-#staging_private_key {
-    display: none;
-}
-
-#live_site_id {
-    display: none;
-}
-
-#live_private_key {
-    display: none;
-}
-
+#staging_site_id,
+#staging_private_key,
+#live_site_id,
+#live_private_key,
 .tablenav {
     display: none;
 }
